[project]
name = "test-package"
version = "0.0.1"
authors = [
  { name="John", email="john@example.com" },
]
description = "test package"
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
